@@ -1,4 +1,9 @@
 
+2020-12-07  Ron Norman <rjn@inglenet.com>
+
+	* codegen.c (output_dump_code): emit code for BASED/LINKAGE fields
+	  to catch SIGSEGV/SIGBUS/SIGFPE and then skip the dump of that record
+
 2020-12-05  Simon Sobisch <simonsobisch@gnu.org>
 
 	* codegen.c (output_display_fields): codegen to output INDEXED BY variables
